<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.gers0n.coffe.Jazz">

    <ListView
        android:id="@+id/DspList2"
        android:layout_width="347dp"
        android:layout_height="387dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        android:divider="@android:color/holo_orange_dark"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGrupo"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center|right"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_orange_dark"
            android:onClick="BoxDefault"
            android:text="@string/RadioDefault"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_orange_dark"
            android:onClick="BoxCalories"
            android:text="@string/RadioCalories"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_orange_dark"
            android:onClick="BoxName"
            android:text="@string/RadioName"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_orange_dark"
            android:onClick="BoxPrice"
            android:text="@string/RadioPrice"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Tall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGrupo" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:onClick="JazzGrandeList"
        android:text="@string/btn_Grande"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/RadioGrupo" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:onClick="JazzSupremeList"
        android:text="@string/btn_Supreme"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/RadioGrupo" />

</android.support.constraint.ConstraintLayout>
