<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gers0n.coffe.grandeSize">

    <ListView
        android:id="@+id/BkList2"
        android:layout_width="344dp"
        android:layout_height="390dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:divider="@android:color/holo_green_dark"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GContainer" />

    <RadioGroup
        android:id="@+id/GContainer"
        android:layout_width="344dp"
        android:layout_height="102dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center|right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/BkList2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_green_dark"
            android:onClick="BoxDefaultSiren"
            android:text="@string/SirenRadioDefault2"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_green_dark"
            android:onClick="BoxCaloriesSiren2"
            android:text="@string/SirenRadioCalories2"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_green_dark"
            android:onClick="BoxNameSiren2"
            android:text="@string/SirenRadioName2"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/holo_green_dark"
            android:onClick="BoxPriceSiren"
            android:text="@string/SirenRadioPrice2"
            android:textSize="12sp" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
